# dotfiles

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  run_tests.sh  tasks.md
.claude/skills/commit-dotfiles/: SKILL.md
accounts/claude-sandbox/git/: .gitconfig.local
claude/: .stow-local-ignore  CLAUDE.md  settings.json
claude/docs/: account-setup.md  claude-md-notes.md  design.md  handoff-format.md  language-servers.md  shared-storage.md  testing-guide.md  token-audit.md
claude/hooks/: format-markdown-on-edit.sh  gate_auto_tools.py  gate_auto_tools.sh  gate_auto_tools_test.py  gate_git.py  gate_git_test.py  log-instructions-loaded.sh  log_instructions_loaded.py  log_instructions_loaded_test.py  log_permission_prompts.py  log_permission_prompts_test.py  log_rotation.py  log_rotation_test.py  mypy-check.sh  prettier-format.sh  reflow_prose.py  reflow_prose_test.py  ruff-format.sh  run_tests.sh  session-tokens.py  session_tokens.py  session_tokens_test.py  show-check-output.sh
claude/rules/: claude-configuration.md  claude-rules-style.md  markdown.md  prototyping.md  python.md  shell.md  testing.md  typescript.md
claude/scripts/: append-session-log.py  distillation_backlog.py  distillation_backlog_test.py  gh-protect-test.sh  gh-protect.sh  git-land.sh  quiet-mypy.sh  quiet-prettier.sh  quiet-ruff.sh  quiet-tests.sh  share-directory.sh  statusline.sh
claude/skills/: session-context-routing.md
claude/skills/config-review/: SKILL.md  accepted-tradeoffs.md  notes.md
claude/skills/distill/: SKILL.md  notes.md
git/: .gitconfig
ruff/: pyproject.toml
zsh/: .claude-keychain.zsh  .zprofile  .zshrc
(+10 files in other folders)
